2010-12-14  Ramon Casero  <ramon.casero@comlab.ox.ac.uk>

	* FileFormatToolbox/scinrrd_index2world.m,
	FileFormatToolbox/scinrrd_world2index.m

	- Fix bug. The x,y coordinates (and, correspondingly, the j, i
	indices) were being operated with the wrong spacing and limit
	values. For example, the x-coordinate was being operated with the
	dy spacing. Now this has been fixed.

2010-07-05  Ramon Casero  <ramon.casero@comlab.ox.ac.uk>

	* FileFormatToolbox/scinrrd_load.m

	- Give error if the data is compressed.

	- If ElementDatafile is LOCAL, then raw data is in the file, not
	an external one.

2010-07-01  Ramon Casero  <ramon.casero@comlab.ox.ac.uk>

	* FileFormatToolbox/scinrrd_save.m

	- Add input argument to control whether data is converted to uint8
	or not before saving.

	* CardiacToolbox/process_misas_patient.m

	- if we have two NormalMri volumes, combine them with a max()
	function to remove banding artifacts, as suggested by Matt Robson

2010-06-30  Ramon Casero  <ramon.casero@comlab.ox.ac.uk>

	* release 0.2.1

	- New minor release given that the bug in WriteRawFile.m and
	WriteMhaFile.m was quite severe, and the new scinrrd_load()
	functionality is interesting.

	* FileFormatToolbox/scinrrd_load.m

	- Now this function can also load an nrrd struct from MetaImage
	(.mha) files, and not only Matlab (.mat). This should save us from
	a lot of time wasted having to load .mha files in Seg3D and
	exported as .mat.

2010-06-28  Ramon Casero  <ramon.casero@comlab.ox.ac.uk>

	* FileFormatToolbox/WriteRawFile.m,
	FileFormatToolbox/WriteMhaFile.m

	- Fix bug. DICOM frames are loaded into Matlab with X-coordinates
	along columns, but they were written along rows, so the image
	volume was rotated 90º.

2010-06-16  Ramon Casero  <ramon.casero@comlab.ox.ac.uk>

	* CardiacToolbox/scinrrd_rv_crescent_tips.m

	- Instead of assigning the top and botton of the crest to the last
	and first axis points, just compute from each slice the closest