@@ -1,3 +1,11 @@
+2010-12-17  Ramon Casero  <ramon.casero@comlab.ox.ac.uk>
+
+	* FileFormatToolbox/scinrrd_index2world.m,
+	FileFormatToolbox/scinrrd_world2index.m
+
+	- Roll back last change, it was not a bug. Rewrite help header to
+	clarify the coordinate and index order.
+
 2010-12-14  Ramon Casero  <ramon.casero@comlab.ox.ac.uk>
 
 	* FileFormatToolbox/scinrrd_index2world.m,
